--- a/Speech/Speech.csproj
+++ b/Speech/Speech.csproj
@@ -58,9 +58,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SApiClient\Assets\Sapi\SocketExtra.cs">
-      <Link>SocketExtra.cs</Link>
+    <Compile Include="..\SApiClient\Assets\Core\ByteInArg.cs">
+      <Link>Core\ByteInArg.cs</Link>
     </Compile>
+    <Compile Include="..\SApiClient\Assets\Core\SocketExtra.cs">
+      <Link>Core\SocketExtra.cs</Link>
+    </Compile>
+    <Compile Include="EmCmd.cs" />
+    <Compile Include="NetServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -68,7 +73,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="SRecognition.cs" />
+    <Compile Include="Speecher.cs" />
+    <Compile Include="Recognizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
