增加图灵聊天机器人 默认语言改为中文：Microsoft Huihui Desktop

--- a/SApiClient/SApiClient.CSharp.csproj
+++ b/SApiClient/SApiClient.CSharp.csproj
@@ -76,9 +76,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ChatRobot\TuLing\TuLingChatRobot.cs" />
+    <Compile Include="Assets\ChatRobot\TuLing\TuLingChatRobotManager.cs" />
     <Compile Include="Assets\Core\ByteInArg.cs" />
     <Compile Include="Assets\Core\SocketExtra.cs" />
     <Compile Include="Assets\Sapi\Speecher.cs" />
+    <Compile Include="Assets\Sapi\SpeecherManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
