--- a/SApiClient/Speech.exe.config
+++ b/SApiClient/Speech.exe.config
@@ -14,7 +14,7 @@
                 <value>0</value>
             </setting>
             <setting name="SpeakVoice" serializeAs="String">
-                <value />
+                <value>Microsoft Huihui Desktop</value>
             </setting>
             <setting name="Port" serializeAs="String">
                 <value>9903</value>
