--- a/Speech/Properties/Settings.settings
+++ b/Speech/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="SpeakVoice" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">Microsoft Huihui Desktop</Value>
     </Setting>
     <Setting Name="Port" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">9903</Value>
