--- a/Speech/app.config
+++ b/Speech/app.config
@@ -14,7 +14,7 @@
                 <value>0</value>
             </setting>
             <setting name="SpeakVoice" serializeAs="String">
-                <value>Microsoft Huihui Desktop</value>
+                <value />
             </setting>
             <setting name="Port" serializeAs="String">
                 <value>9903</value>
@@ -27,6 +27,9 @@
                         <string>发射</string>
                     </ArrayOfString>
                 </value>
+            </setting>
+            <setting name="DefaultLang" serializeAs="String">
+                <value>zh-CN</value>
             </setting>
         </Speech.Properties.Settings>
     </userSettings>
