--- a/Speech/app.config
+++ b/Speech/app.config
@@ -5,7 +5,7 @@
         <section name="Speech.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
         <Speech.Properties.Settings>
             <setting name="SpeakVolume" serializeAs="String">
                 <value>100</value>
@@ -14,15 +14,14 @@
                 <value>0</value>
             </setting>
             <setting name="SpeakVoice" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Port" serializeAs="String">
                 <value>9903</value>
             </setting>
             <setting name="Keywords" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <string>Fire</string>
                         <string>发射</string>
                     </ArrayOfString>
