--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,12 @@ Network Trash Folder
 Temporary Items
 .apdisk
 Unity3d使用SAPI语音在Windows上进行文本发音.docx
-/SApiClient/Library
-/SApiClient/Temp
-/SApiClient/.vs
+/Client/Library
+/Client/Temp
+/Client/.vs
 /Speech/bin
 /Speech/obj
 /Speech/.vs
 /SApiClient/Output
+.suo
+
